perf: get add transaction readonly